# 3D-Software-Rasterizer

./: CMakeLists.txt  README.md  main.cpp  renderer.hpp
